Added chrome-frame tag.  Bindings for completed items.

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -28,7 +28,7 @@
     var new_item_body = $("#new_item #item_body");
     new_item_body.select();
     
-    bindNewItem($("#items .item"));
+    bindNewItem($(".items .item"));
     
     $("#new_item").submit(function(e) {
       e.preventDefault();
