--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 !!!XML
 %html
   %head
+    %meta(http-equiv="X-UA-Compatible" content="chrome=1")
     =stylesheet_link_tag "compiled/screen"
     =stylesheet_link_tag "tipTip"
     =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
