--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -8,4 +8,4 @@
   
   .delete_wrapper
     =#link_to 'x', list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button', :title => "delete"
-    =link_to image_tag("delete.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button', :title => "delete"
+    =link_to image_tag("delete_lite.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button', :title => "delete"
