--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,3 +1,4 @@
+-@title = "Edit user"
 -semantic_form_for @user, :url => user_path, :method => 'put' do |form|
   =render :partial => "users/form", :object => form
   -form.buttons do
