--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"
     =javascript_include_tag "jquery.tipTip.minified"
     %title
-      lists
+      =@title || "lists"
   %body
     #container
       #header
